update workout exercises
