# backend/docs/swagger.json
@@ -1817,11 +1817,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "Exercise successfully deleted",
-                        "schema": {
-                            "$ref": "#/definitions/models.WorkoutExerciseResponse"
-                        }
+                    "204": {
+                        "description": "Exercise successfully deleted"
                     },
                     "400": {
                         "description": "Request cancelled",
@@ -2086,6 +2083,20 @@
                 }
             }
         },
+        "models.WorkoutExerciseItem": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.WorkoutExerciseRequest": {
             "type": "object",
             "properties": {
@@ -2111,6 +2122,9 @@
             "properties": {
                 "created_at": {
                     "type": "string"
+                },
+                "exercise": {
+                    "$ref": "#/definitions/models.WorkoutExerciseItem"
                 },
                 "exercise_id": {
                     "type": "integer"
